--- a/DemoFTTS/DemoFTTS.csproj
+++ b/DemoFTTS/DemoFTTS.csproj
@@ -35,6 +35,10 @@
     <Reference Include="FTTSS">
       <HintPath>..\..\FTTSS\FTTSS\bin\Debug\FTTSS.dll</HintPath>
     </Reference>
+    <Reference Include="NITGEN.SDK.NBioBSP, Version=5.0.0.0, Culture=neutral, PublicKeyToken=96eee45103d523d1, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\getTextFromBinMinFIM6060\getTextFromBinMinFIM6060\NITGEN.SDK.NBioBSP.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -56,6 +60,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
